--- a/documentation/content/en/articles/freebsd-releng/_index.adoc
+++ b/documentation/content/en/articles/freebsd-releng/_index.adoc
@@ -88,28 +88,28 @@ This article will highlight the workflow and responsibilities of the {teamRe} fo
 
 The following sections of this article describe:
 
-crossref:freebsd-releng[releng-prep]::
+crossref:freebsd-releng[releng-prep, General Information and Preparation]::
 General information and preparation before starting the release cycle.
 
-crossref:freebsd-releng[releng-website]::
+crossref:freebsd-releng[releng-website, Website Changes During the Release Cycle]::
 Website Changes During the Release Cycle
 
-crossref:freebsd-releng[releng-terms]::
+crossref:freebsd-releng[releng-terms, Release Engineering Terminology]::
 Terminology and general information, such as the "code slush" and "code freeze", used throughout this document.
 
-crossref:freebsd-releng[releng-head]::
+crossref:freebsd-releng[releng-head, Release from {branchHead}]::
 The Release Engineering process for a "dot-zero" release.
 
-crossref:freebsd-releng[releng-stable]::
+crossref:freebsd-releng[releng-stable, Release from {branchStable}]::
 The Release Engineering process for a "point" release.
 
-crossref:freebsd-releng[releng-building]::
+crossref:freebsd-releng[releng-building, Building FreeBSD Installation Media]::
 Information related to the specific procedures to build installation medium.
 
-crossref:freebsd-releng[releng-mirrors]::
+crossref:freebsd-releng[releng-mirrors, Publishing FreeBSD Installation Media to Project Mirrors]::
 Procedures to publish installation medium.
 
-crossref:freebsd-releng[releng-wrapup]::
+crossref:freebsd-releng[releng-wrapup, Wrapping up the Release Cycle]::
 Wrapping up the release cycle.
 
 [[releng-prep]]
@@ -361,7 +361,7 @@ FreeBSD `ALPHA` snapshots should be built approximately once a week.
 For the first `ALPHA` build, the `BRANCH` value in [.filename]#sys/conf/newvers.sh# needs to be changed from `CURRENT` to `ALPHA1`.
 For subsequent `ALPHA` builds, increment each `ALPHA__N__` value by one.
 
-See crossref:freebsd-releng[releng-building] for information on building the `ALPHA` images.
+See crossref:freebsd-releng[releng-building, Building FreeBSD Installation Media] for information on building the `ALPHA` images.
 
 [[releng-head-branching]]
 === Creating the {branchStablex} Branch
@@ -742,7 +742,7 @@ The completed Errata Notice template should be emailed together with either a pa
 
 For Errata Notice requests immediately following the release, the request should be emailed to both the {teamRe} and the {teamSecteam}.
 Once the {branchReleng} branch has been handed over to the {teamSecteam} as
-described in crossref:freebsd-releng[releng-wrapup-handoff], Errata Notice requests should be sent to the {teamSecteam}.
+described in crossref:freebsd-releng[releng-wrapup-handoff, Handoff to the {teamSecteam}], Errata Notice requests should be sent to the {teamSecteam}.
 
 [[releng-wrapup-handoff]]
 === Handoff to the {teamSecteam}
