--- a/documentation/content/en/articles/pam/_index.adoc
+++ b/documentation/content/en/articles/pam/_index.adoc
@@ -419,10 +419,10 @@ If you are unsure, refer to the individual application's documentation to determ
 Note that if you use [.filename]#/etc/pam.d/# instead of [.filename]#/etc/pam.conf#, the service name is specified by the name of the policy file, and omitted from the actual configuration lines, which then start with the facility name.
 
 The facility is one of the four facility keywords described in
-crossref:pam[pam-facilities-primitives].
+crossref:pam[pam-facilities-primitives, Facilities and Primitives].
 
 Likewise, the control flag is one of the four keywords described in
-	crossref:pam[pam-chains-policies], describing how to interpret the return code from the module. 
+	crossref:pam[pam-chains-policies, Chains and Policies], describing how to interpret the return code from the module. 
 Linux-PAM supports an alternate syntax that lets you specify the action to associate with each possible return code, but this should be avoided as it is non-standard and closely tied in with the way Linux-PAM dispatches service calls (which differs greatly from the way Solaris(TM) and OpenPAM do it.) 
 Unsurprisingly, OpenPAM does not support this syntax.
 
@@ -624,7 +624,7 @@ The following is a minimal implementation of man:su[1] using PAM.
 Note that it uses the OpenPAM-specific man:openpam_ttyconv[3] conversation function, which is prototyped in [.filename]#security/openpam.h#.
 If you wish build this application on a system with a different PAM library, you will have to provide your own conversation function.
 A robust conversation function is surprisingly difficult to implement;
-the one presented in crossref:pam[pam-sample-conv] is a good starting point, but should not be used in real-world applications.
+the one presented in crossref:pam[pam-sample-conv, Sample PAM Conversation Function] is a good starting point, but should not be used in real-world applications.
 
 [.programlisting]
 ....
