--- a/documentation/content/en/articles/pr-guidelines/_index.adoc
+++ b/documentation/content/en/articles/pr-guidelines/_index.adoc
@@ -121,11 +121,11 @@ The "patched" state is directly related to feedback, so you may go directly to "
 
 While handling problem reports, either as a developer who has direct access to the Problem Reports database or as a contributor who browses the database and submits followups with patches, comments, suggestions or change requests, you will come across several different types of PRs.
 
-* crossref:pr-guidelines[pr-unassigned]
-* crossref:pr-guidelines[pr-assigned]
-* crossref:pr-guidelines[pr-dups]
-* crossref:pr-guidelines[pr-stale]
-* crossref:pr-guidelines[pr-misfiled-notpr]
+* crossref:pr-guidelines[pr-unassigned, Unassigned PRs]
+* crossref:pr-guidelines[pr-assigned, Assigned PRs]
+* crossref:pr-guidelines[pr-dups, Duplicate PRs]
+* crossref:pr-guidelines[pr-stale, Stale PRs]
+* crossref:pr-guidelines[pr-misfiled-notpr, Non-Bug PRs]
 
 The following sections describe what each different type of PRs is used for, when a PR belongs to one of these types, and what treatment each different type receives.
 
