--- a/documentation/content/en/articles/releng/_index.adoc
+++ b/documentation/content/en/articles/releng/_index.adoc
@@ -105,19 +105,19 @@ In addition to source updates via Subversion, binary patchkits are available to 
 
 The following sections of this article describe:
 
-crossref:releng[release-proc]::
+crossref:releng[release-proc, Release Process]::
 The different phases of the release engineering process leading up to the actual system build.
 
-crossref:releng[release-build]::
+crossref:releng[release-build, Release Building]::
 The actual build process.
 
-crossref:releng[extensibility]::
+crossref:releng[extensibility, Extensibility]::
 How the base release may be extended by third parties.
 
-crossref:releng[lessons-learned]::
+crossref:releng[lessons-learned, Lessons Learned from FreeBSD 4.4]::
 Some of the lessons learned through the release of FreeBSD 4.4.
 
-crossref:releng[future]::
+crossref:releng[future, Future Directions]::
 Future directions of development.
 
 [[release-proc]]
