--- a/documentation/content/en/books/arch-handbook/mac/_index.adoc
+++ b/documentation/content/en/books/arch-handbook/mac/_index.adoc
@@ -1978,7 +1978,7 @@ void mpo_create_root_mount(struct ucred *cred, struct mount *mp,
 | Description
 | Locking
 
-3+|See crossref:mac[mac-mpo-create-mount].
+3+|See crossref:mac[mac-mpo-create-mount, `mpo_create_mount`].
 |===
 
 Fill out the labels on the mount point being created by the passed subject credential.
@@ -4314,7 +4314,7 @@ void mpo_check_vnode_mmap_downgrade(struct ucred *cred, struct vnode *vp,
 | Locking
 
 |`cred`
-|See crossref:mac[mac-mpo-check-vnode-mmap].
+|See crossref:mac[mac-mpo-check-vnode-mmap, `mpo_check_vnode_mmap`].
 |
 
 |`vp`
