--- a/documentation/content/en/books/arch-handbook/smp/_index.adoc
+++ b/documentation/content/en/books/arch-handbook/smp/_index.adoc
@@ -58,7 +58,7 @@ The goal of SMPng is to allow concurrency in the kernel. The kernel is basically
 one rather large and complex program. To make the kernel multi-threaded we use
 some of the same tools used to make other programs multi-threaded. These include
 mutexes, shared/exclusive locks, semaphores, and condition variables. For the
-definitions of these and other SMP-related terms, please see the crossref:smp[smp-glossary] section of this article.
+definitions of these and other SMP-related terms, please see the crossref:smp[smp-glossary, Glossary] section of this article.
 
 [[smp-lock-fundamentals]]
 == Basic Tools and Locking Fundamentals
