--- a/documentation/content/en/books/developers-handbook/tools/_index.adoc
+++ b/documentation/content/en/books/developers-handbook/tools/_index.adoc
@@ -180,7 +180,7 @@ Moreover, distributing a program written for a compiler is usually more straight
 
 As the edit-compile-run-debug cycle is rather tedious when using separate programs, many commercial compiler makers have produced Integrated Development Environments (IDEs for short).
 FreeBSD does not include an IDE in the base system, but package:devel/kdevelop[] is available in the Ports Collection and many use Emacs for this purpose.
-Using Emacs as an IDE is discussed in crossref:tools[emacs].
+Using Emacs as an IDE is discussed in crossref:tools[emacs, Using Emacs as a Development Environment].
 
 [[tools-compiling]]
 == Compiling with `cc`
@@ -367,7 +367,7 @@ Basically, if the program failed under certain conditions, the system would writ
 
 ==== Fascinating stuff, but what I am supposed to do now?
 
-Use a debugger to analyze the core (see crossref:tools[debugging]).
+Use a debugger to analyze the core (see crossref:tools[debugging, Debugging]).
 
 ==== When my program dumped core, it said something about a segmentation fault. What is that?
 
