--- a/documentation/content/en/books/handbook/advanced-networking/_index.adoc
+++ b/documentation/content/en/books/handbook/advanced-networking/_index.adoc
@@ -154,7 +154,7 @@ Such routes only show up on the host that supports the alias and all other hosts
 The final line (destination subnet `224`) deals with multicasting.
 
 Various attributes of each route can be seen in the `Flags` column.
-crossref:advanced-networking[routeflags] summarizes some of these flags and their meanings:
+crossref:advanced-networking[routeflags,.Commonly Seen Routing Table Flags] summarizes some of these flags and their meanings:
 
 [[routeflags]]
 .Commonly Seen Routing Table Flags
@@ -770,7 +770,7 @@ hostapd_enable="YES"
 ....
 
 Before trying to configure man:hostapd[8], first configure the basic settings
-introduced in crossref:advanced-networking[network-wireless-ap-basic].
+introduced in crossref:advanced-networking[network-wireless-ap-basic, Basic Settings].
 
 ===== WPA2-PSK
 
