--- a/documentation/content/en/books/handbook/config/_index.adoc
+++ b/documentation/content/en/books/handbook/config/_index.adoc
@@ -127,7 +127,7 @@ The [.filename]#/etc# directory contains all of the FreeBSD base system configur
 |Contains descriptive information about the local host name, configuration
 details for any potential network interfaces and which services should be
 started up at system initial boot time. More information in
-crossref:bsdinstall[configtuning-core-configuration]
+crossref:bsdinstall[configtuning-core-configuration, Managing System-Specific Configuration]
 
 |[.filename]#/etc/security#
 |OpenBSM audit configuration files, see man:audit[8] for more information.
@@ -143,7 +143,7 @@ crossref:bsdinstall[configtuning-core-configuration]
 
 |[.filename]#/etc/sysctl.conf#
 |Contains settings for the kernel. More information in
-crossref:bsdinstall[configtuning-sysctl]
+crossref:bsdinstall[configtuning-sysctl, The sysctl utility]
 
 |===
 
