--- a/documentation/content/en/books/handbook/disks/_index.adoc
+++ b/documentation/content/en/books/handbook/disks/_index.adoc
@@ -353,7 +353,7 @@ Refer to man:usbconfig[8] for more information about this command.
 ugen0.3: <Simple Drive STECH> at usbus0, cfg=0 md=HOST spd=HIGH (480Mbps) pwr=ON (2mA)
 ....
 
-If the device has not been formatted, refer to crossref:disks[disks-adding] for instructions on how to format and create partitions on the USB drive.
+If the device has not been formatted, refer to crossref:disks[disks-adding, Adding Disks] for instructions on how to format and create partitions on the USB drive.
 If the drive comes with a file system, it can be mounted by `root` using the instructions in crossref:basics[mount-unmount,“Mounting and Unmounting File Systems”].
 
 [WARNING]
@@ -703,7 +703,7 @@ To do so, use [.filename]#dd# with the device name as the input file and the nam
 # dd if=/dev/cd0 of=file.iso bs=2048
 ....
 
-The resulting image file can be burned to CD as described in crossref:disks[cdrecord].
+The resulting image file can be burned to CD as described in crossref:disks[cdrecord, Burning a CD].
 ====
 
 [[mounting-cd]]
@@ -775,7 +775,7 @@ To duplicate an audio CD, extract the audio data from the CD to a series of file
 
 crossref:disks[using-cdrecord] describes how to duplicate and burn an audio CD.
 If the FreeBSD version is less than 10.0 and the device is ATAPI, the `atapicam`
-module must be first loaded using the instructions in crossref:disks[atapicam].
+module must be first loaded using the instructions in crossref:disks[atapicam, Supported Devices].
 
 [[using-cdrecord]]
 [.procedure]
@@ -796,7 +796,7 @@ Refer to the `cdda2wav` manual page for instructions on how to specify a device 
 % cdrecord -v dev=2,0 -dao -useinfo  *.wav
 ....
 +
-Make sure that _2,0_ is set appropriately, as described in crossref:disks[cdrecord].
+Make sure that _2,0_ is set appropriately, as described in crossref:disks[cdrecord, Burning a CD].
 
 [[creating-dvds]]
 == Creating and Using DVD Media
@@ -811,7 +811,7 @@ Five physical recordable formats can be defined for a recordable DVD:
 * DVD-RAM: This is a rewritable format which can be seen as a removable hard
   drive. However, this media is not compatible with most DVD-ROM drives and
   DVD-Video players as only a few DVD writers support the DVD-RAM format. Refer
-  to crossref:disks[creating-dvd-ram] for more information on DVD-RAM use.
+  to crossref:disks[creating-dvd-ram, Using a DVD-RAM] for more information on DVD-RAM use.
 * DVD+RW: This is a rewritable format defined by the https://en.wikipedia.org/wiki/DVD%2BRW_Alliance[DVD+RW Alliance]. A DVD+RW can be rewritten about 1000 times.
 * DVD+R: This format is the write once variation of the DVD+RW format.
 
@@ -832,7 +832,7 @@ This command is part of the package:sysutils/dvd+rw-tools[] utilities which supp
 These tools use the SCSI subsystem to access the devices, therefore
 crossref:disks[atapicam,ATAPI/CAM support] must be loaded or statically compiled into the kernel.
 This support is not needed if the burner uses the USB interface.
-Refer to crossref:disks[usb-disks] for more details on USB device configuration.
+Refer to crossref:disks[usb-disks, USB Storage Devices] for more details on USB device configuration.
 
 DMA access must also be enabled for ATAPI devices, by adding the following line to [.filename]#/boot/loader.conf#:
 
@@ -1843,7 +1843,7 @@ The following example demonstrates adding a new hard drive to a system that will
 .Procedure: Encrypting a Partition with gbde
 . Add the New Hard Drive
 +
-Install the new drive to the system as explained in crossref:disks[disks-adding].
+Install the new drive to the system as explained in crossref:disks[disks-adding, Adding Disks].
 For the purposes of this example, a new hard drive partition has been added as [.filename]#/dev/ad4s1c# and [.filename]#/dev/ad0s1*# represents the existing standard FreeBSD partitions.
 +
 [source,shell]
