--- a/documentation/content/en/books/handbook/l10n/_index.adoc
+++ b/documentation/content/en/books/handbook/l10n/_index.adoc
@@ -85,7 +85,7 @@ LanguageCode_CountryCode.Encoding
 ....
 
 The _LanguageCode_ and _CountryCode_ are used to determine the country and the specific language variation.
-crossref:l10n[locale-lang-country] provides some examples of __LanguageCode_CountryCode__:
+crossref:l10n[locale-lang-country,.Common Language and Country Codes] provides some examples of __LanguageCode_CountryCode__:
 
 [[locale-lang-country]]
 .Common Language and Country Codes
@@ -332,7 +332,7 @@ To test keymaps without rebooting, use man:kbdmap[1].
 The `keychange` entry is usually needed to program function keys to match the selected terminal type because function key sequences cannot be defined in the keymap.
 
 Next, set the correct console terminal type in [.filename]#/etc/ttys# for all virtual terminal entries.
-crossref:l10n[locale-charset] summarizes the available terminal types.:
+crossref:l10n[locale-charset,.Defined Terminal Types for Character Sets] summarizes the available terminal types.:
 
 [[locale-charset]]
 .Defined Terminal Types for Character Sets
@@ -364,7 +364,7 @@ crossref:l10n[locale-charset] summarizes the available terminal types.:
 |===
 
 For languages with wide or multibyte characters, install a console for that language from the FreeBSD Ports Collection.
-The available ports are summarized in crossref:l10n[locale-console].
+The available ports are summarized in crossref:l10n[locale-console,.Available Console from Ports Collection].
 Once installed, refer to the port's [.filename]#pkg-message# or man pages for configuration and usage instructions.
 
 [[locale-console]]
@@ -409,7 +409,7 @@ When configuring Xorg for localization, additional fonts and input methods are a
 Application specific i18n settings such as fonts and menus can be tuned in [.filename]#~/.Xresources# and should allow users to view their selected language in graphical application menus.
 
 The X Input Method (XIM) protocol is an Xorg standard for inputting non-English characters.
-crossref:l10n[locale-xim] summarizes the input method applications which are available in the FreeBSD Ports Collection.
+crossref:l10n[locale-xim,.Available Input Methods] summarizes the input method applications which are available in the FreeBSD Ports Collection.
 Additional Fcitx and Uim applications are also available.
 
 [[locale-xim]]
