--- a/documentation/content/en/books/handbook/mac/_index.adoc
+++ b/documentation/content/en/books/handbook/mac/_index.adoc
@@ -150,7 +150,7 @@ This may only be done in single-user mode and is not a requirement for the swap 
 [NOTE]
 ====
 Some users have experienced problems with setting the `multilabel` flag on the root partition.
-If this is the case, please review crossref:mac[mac-troubleshoot].
+If this is the case, please review crossref:mac[mac-troubleshoot, Troubleshooting the MAC Framework].
 ====
 
 Since the multi label policy is set on a per-file system basis, a multi label policy may not be needed if the file system layout is well designed.
