--- a/documentation/content/en/books/handbook/mirrors/_index.adoc
+++ b/documentation/content/en/books/handbook/mirrors/_index.adoc
@@ -356,7 +356,7 @@ For example, the URL `https://git.FreeBSD.org/src.git` specifies the main branch
 |=======================================================
 
 External mirrors maintained by project members are also available; please refer
-to the crossref:mirrors[external-mirrors] section.
+to the crossref:mirrors[external-mirrors, External mirrors] section.
 
 To clone a copy of the FreeBSD system source code repository:
 
