--- a/documentation/content/en/books/handbook/network/_index.adoc
+++ b/documentation/content/en/books/handbook/network/_index.adoc
@@ -616,7 +616,7 @@ network={
 
 The first step will be to configure the wireless network card to an interface.
 To find out what wireless network cards are in the system check the section
-crossref:network[config-identify-network-adapter].
+crossref:network[config-identify-network-adapter, Identify Network Adapters].
 
 [source,shell]
 ....
