--- a/documentation/content/en/books/handbook/ports/_index.adoc
+++ b/documentation/content/en/books/handbook/ports/_index.adoc
@@ -1307,4 +1307,4 @@ Instead, any fixes and support come from the general community who subscribe to 
 +
 If there is no response to the email, use Bugzilla to submit a bug report using the instructions in extref:{problem-reports}[Writing FreeBSD Problem Reports].
 . Fix it! The extref:{porters-handbook}[Porter's Handbook] includes detailed information on the ports infrastructure so that you can fix the occasional broken port or even submit your own!
-. Install the package instead of the port using the instructions in crossref:ports[pkgng-intro].
+. Install the package instead of the port using the instructions in crossref:ports[pkgng-intro, Using pkg for Binary Package Management].
