--- a/documentation/content/en/books/handbook/security/_index.adoc
+++ b/documentation/content/en/books/handbook/security/_index.adoc
@@ -880,7 +880,7 @@ Then restart the server executing the following command:
 ....
 
 It is strongly recommended to follow the security improvements indicated in
-crossref:security[security-sshd-security-options].
+crossref:security[security-sshd-security-options, SSH Server Security Options].
 
 [[security-sshd-security-options]]
 === SSH Server Security Options
