--- a/documentation/content/en/books/handbook/x11/_index.adoc
+++ b/documentation/content/en/books/handbook/x11/_index.adoc
@@ -608,7 +608,7 @@ However, there are several free, high quality Type1 (PostScript(R)) fonts availa
 The URW font collection (package:x11-fonts/urwfonts[]) includes high quality versions of standard type1 fonts (Times Roman(TM), Helvetica(TM), Palatino(TM) and others).
 The Freefonts collection (package:x11-fonts/freefonts[]) includes many more fonts, but most of them are intended for use in graphics software such as the Gimp, and are not complete enough to serve as screen fonts.
 In addition, Xorg can be configured to use TrueType(R) fonts with a minimum of effort.
-For more details on this, see the man:X[7] manual page or crossref:x11[truetype].
+For more details on this, see the man:X[7] manual page or crossref:x11[truetype, TrueType(R) Fonts].
 
 To install the above Type1 font collections from binary packages, run the following commands:
 
@@ -637,7 +637,7 @@ Alternatively, at the command line in the X session run:
 
 This will work but will be lost when the X session is closed, unless it is added to the startup file ([.filename]#~/.xinitrc# for a normal `startx` session, or [.filename]#~/.xsession# when logging in through a graphical login manager like XDM).
 A third way is to use the new [.filename]#/usr/local/etc/fonts/local.conf# as
-demonstrated in crossref:x11[antialias].
+demonstrated in crossref:x11[antialias, Anti-Aliased Fonts].
 
 [[truetype]]
 === TrueType(R) Fonts
@@ -671,7 +671,7 @@ Then create an index of X font files in a directory:
 ....
 
 Now add the TrueType(R) directory to the font path.
-This is just the same as described in crossref:x11[type1]:
+This is just the same as described in crossref:x11[type1, Type1 Fonts]:
 
 [source,shell]
 ....
