--- a/documentation/content/en/books/handbook/zfs/_index.adoc
+++ b/documentation/content/en/books/handbook/zfs/_index.adoc
@@ -62,7 +62,7 @@ ZFS has three major design goals:
   crossref:zfs[zfs-term-l2arc,L2ARC], and a disk-based synchronous write cache
   named crossref:zfs[zfs-term-zil,ZIL].
 
-A complete list of features and terminology is in crossref:zfs[zfs-term].
+A complete list of features and terminology is in crossref:zfs[zfs-term, ZFS Features and Terminology].
 
 [[zfs-differences]]
 == What Makes ZFS Different
