--- a/documentation/content/en/books/porters-handbook/plist/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/plist/_index.adoc
@@ -217,7 +217,7 @@ Running `make makeplist` will show an example for [.filename]#pkg-plist#.
 The output of `makeplist` must be double checked for correctness as it tries to automatically guess a few things, and can get it wrong.
 
 User configuration files should be installed as [.filename]#filename.sample#, as
-it is described in crossref:plist[plist-config].
+it is described in crossref:plist[plist-config, Configuration Files].
 [.filename]#info/dir# must not be listed and appropriate [.filename]#install-info# lines must be added as noted in the crossref:makefiles[makefile-info,info files] section.
 Any libraries installed by the port must be listed as specified in the crossref:special[porting-shlibs,shared libraries]  section.
 
@@ -380,7 +380,7 @@ The "actual", non-sample, file is either the second filename, if present, or the
 This does three things. First, add the first file passed as argument, the sample file, to the plist.
 Then, on installation, if the actual file is not found, copy the sample file to the actual file.
 And finally, on deinstallation, remove the actual file if it has not been modified.
-See crossref:plist[plist-config] for more information.
+See crossref:plist[plist-config, Configuration Files] for more information.
 
 [[plist-keywords-shared-mime-info]]
 === `@shared-mime-info` _directory_
@@ -503,7 +503,7 @@ For example, [.filename]#/var/db/${PORTNAME}# needs to have a `@dir` entry where
 ==== `@exec` _command_, `@unexec` _command_ (Deprecated)
 
 Execute _command_ as part of the installation or deinstallation process.
-Please use crossref:plist[plist-keywords-base-exec] instead.
+Please use crossref:plist[plist-keywords-base-exec, `@preexec` _command_, `@postexec` _command_, `@preunexec` _command_, `@postunexec` _command_] instead.
 
 [[plist-keywords-base-dirrm]]
 ==== `@dirrm` _directory_ (Deprecated)
@@ -615,7 +615,7 @@ actions: [file(1)]
 
 These keywords contains a man:sh[1] script to be executed before or after installation, deinstallation, or upgrade of the package.
 In addition to the usual `@exec %_foo_` placeholders described in
-crossref:plist[plist-keywords-base-exec], there is a new one, `%@`, which represents the argument of the keyword.
+crossref:plist[plist-keywords-base-exec, `@preexec` _command_, `@postexec` _command_, `@preunexec` _command_, `@postunexec` _command_], there is a new one, `%@`, which represents the argument of the keyword.
 
 [[plist-keywords-examples]]
 ==== Custom Keyword Examples
