--- a/documentation/content/en/books/porters-handbook/testing/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/testing/_index.adoc
@@ -192,7 +192,7 @@ The path with `LOCALBASE` is more likely to still work if the system administrat
 ====
 All these tests are done automatically when running `poudriere testport` or `poudriere bulk -t`.
 It is highly recommended that every ports contributor install and test their ports with it.
-See crossref:testing[testing-poudriere] for more information.
+See crossref:testing[testing-poudriere, poudriere] for more information.
 ====
 
 [[testing-poudriere]]
@@ -443,7 +443,7 @@ Will update the given _PORTSTREE_, one tree given by the output of `poudriere -l
 [NOTE]
 ====
 Ports trees without a method, see
-crossref:testing[testing-poudriere-ports-tree-manual], cannot be updated like this and must be updated manually by the porter.
+crossref:testing[testing-poudriere-ports-tree-manual, Using Manually Managed Ports Trees with poudriere], cannot be updated like this and must be updated manually by the porter.
 ====
 
 [[testing-poudriere-testing-ports]]
@@ -511,7 +511,7 @@ Adding the `-c`:
 Presents the port configuration dialog before the port is built.
 The ports given after `-o` in the format `_category_/_portname_` will use the specified options, all dependencies will use the default options.
 Testing dependent ports with non-default options can be accomplished using sets,
-see crossref:testing[testing-poudriere-sets].
+see crossref:testing[testing-poudriere-sets, Using Sets].
 
 [TIP]
 ====
