--- a/documentation/content/en/articles/ldap-auth/_index.adoc
+++ b/documentation/content/en/articles/ldap-auth/_index.adoc
@@ -188,7 +188,7 @@ Getting Private key
 
 This will create a self-signed certificate that can be used for the directives in [.filename]#slapd.conf#, where [.filename]#cert.crt# and [.filename]#cacert.crt# are the same file.
 If you are going to use many OpenLDAP servers (for replication via `slurpd`) you
-will want to see crossref:ldap-auth[ssl-ca] to generate a CA key and use it to sign individual server certificates.
+will want to see crossref:ldap-auth[ssl-ca, OpenSSL Certificates for LDAP] to generate a CA key and use it to sign individual server certificates.
 
 Once this is done, put the following in [.filename]#/etc/rc.conf#:
 
@@ -494,7 +494,7 @@ Unfortunately, as of the time this was written FreeBSD did not support changing 
 As a result of this, most administrators are left to implement a solution themselves.
 I provide some examples here.
 Note that if you write your own password change script, there are some security
-issues you should be made aware of; see crossref:ldap-auth[security-passwd]
+issues you should be made aware of; see crossref:ldap-auth[security-passwd, Password Storage]
 
 [[chpw-shell]]
 .Shell Script for Changing Passwords
