--- a/documentation/content/en/books/design-44bsd/_index.adoc
+++ b/documentation/content/en/books/design-44bsd/_index.adoc
@@ -230,7 +230,7 @@ Important components of the kernel state are described in Chapter 4.
 image:fig1.png[Process lifecycle]
 
 The process lifecycle is depicted in
-crossref:design-44bsd[fig-process-lifecycle].
+crossref:design-44bsd[fig-process-lifecycle,.Process lifecycle].
 A process may create a new process that is a copy of the original by using the _fork_ system call.
 The _fork_ call returns twice: once in the parent process, where the return value is the process identifier of the child, and once in the child process, where the return value is 0.
 The parent-child relationship induces a hierarchical structure on the set of processes in the system.
