--- a/documentation/content/en/books/handbook/boot/_index.adoc
+++ b/documentation/content/en/books/handbook/boot/_index.adoc
@@ -217,7 +217,7 @@ The loader will then read [.filename]#/boot/loader.rc#, which by default reads i
 
 Finally, by default, loader issues a 10 second wait for key presses, and boots the kernel if it is not interrupted.
 If interrupted, the user is presented with a prompt which understands the command set, where the user may adjust variables, unload all modules, load modules, and then finally boot or reboot.
-crossref:boot[boot-loader-commands] lists the most commonly used loader commands.
+crossref:boot[boot-loader-commands,.Loader Built-In Commands] lists the most commonly used loader commands.
 For a complete discussion of all available commands, refer to man:loader[8].
 
 [[boot-loader-commands]]
@@ -306,7 +306,7 @@ To load an automated kernel configuration script:
 === Last Stage
 
 Once the kernel is loaded by either loader or by boot2, which bypasses loader, it examines any boot flags and adjusts its behavior as necessary.
-crossref:boot[boot-kernel] lists the commonly used boot flags.
+crossref:boot[boot-kernel,.Kernel Interaction During Boot] lists the commonly used boot flags.
 Refer to man:boot[8] for more information on the other boot flags.
 
 [[boot-kernel]]
@@ -398,7 +398,7 @@ This file stores kernel boot information known as variables, sometimes referred 
 These "device hints" are used by device drivers for device configuration.
 
 Device hints may also be specified at the Stage 3 boot loader prompt, as
-demonstrated in crossref:boot[boot-loader].
+demonstrated in crossref:boot[boot-loader, Stage Three].
 Variables can be added using `set`, removed with `unset`, and viewed `show`.
 Variables set in [.filename]#/boot/device.hints# can also be overridden.
 Device hints entered at the boot loader are not permanent and will not be applied on the next reboot.
