--- a/documentation/content/en/books/handbook/jails/_index.adoc
+++ b/documentation/content/en/books/handbook/jails/_index.adoc
@@ -405,7 +405,7 @@ Execute the following command to start the jail:
 # service jail start classic
 ....
 
-More information on how to manage jails can be found in the section crossref:jails[jail-management].
+More information on how to manage jails can be found in the section crossref:jails[jail-management, Jail Management].
 
 [[thin-jail]]
 == Thin Jails
@@ -515,7 +515,7 @@ Execute the following command to start the jail:
 ....
 
 More information on how to manage jails can be found in the section
-crossref:jails[jail-management].
+crossref:jails[jail-management, Jail Management].
 
 [[creating-thin-jail-nullfs]]
 === Creating a Thin Jail Using NullFS
@@ -716,8 +716,8 @@ ifconfig_bridge0="inet 192.168.1.150/24 addm em0 up"
 
 The next step is to create the jail as indicated above.
 
-Either the crossref:jails[classic-jail] procedure and the
-crossref:jails[thin-jail] procedure can be used.
+Either the crossref:jails[classic-jail, Classic Jail (Thick Jail)] procedure and the
+crossref:jails[thin-jail, Thin Jails] procedure can be used.
 The only thing that will change is the configuration in the [.filename]#/etc/jail.conf# file.
 
 The path [.filename]#/usr/local/jails/containers/vnet# will be used as an example for the created jail.
@@ -790,7 +790,7 @@ Once enabled, it can be started without rebooting by executing the following com
 ....
 
 The next step will be to create a jail as indicated above, for example in
-crossref:jails[creating-thin-jail-openzfs-snapshots], but *without* performing the configuration.
+crossref:jails[creating-thin-jail-openzfs-snapshots, Creating a Thin Jail Using OpenZFS Snapshots], but *without* performing the configuration.
 FreeBSD Linux jails require a specific configuration that will be detailed below.
 
 Once the jail has been created as explained above, execute the following command to perform required configuration for the jail and start it:
