--- a/documentation/content/en/books/handbook/mail/_index.adoc
+++ b/documentation/content/en/books/handbook/mail/_index.adoc
@@ -81,7 +81,7 @@ This application can be a command line program, such as the built-in `mail` util
 Dozens of graphical programs are also available in the Ports Collection, including Claws Mail, Evolution, and Thunderbird.
 Some organizations provide a web mail program which can be accessed through a web browser.
 More information about installing and using a MUA on FreeBSD can be found in
-crossref:mail[mail-agents].
+crossref:mail[mail-agents, Mail User Agents].
 
 Mail Transfer Agent (MTA)::
 The Mail Transfer Agent (MTA) is responsible for receiving incoming mail and delivering outgoing mail.
@@ -384,7 +384,7 @@ To install it execute the following command:
 # pkg install dma
 ....
 
-Perform the configuration as indicated in crossref:mail[configuring-dragonfly-mail-agent].
+Perform the configuration as indicated in crossref:mail[configuring-dragonfly-mail-agent, Configuring DragonFly Mail Agent (DMA)].
 
 Then change all the entries in the file [.filename]#/etc/mail/mailer.conf# to man:dma[8]:
 
