--- a/website/content/en/status/report-2024-07-2024-09/pinephone.adoc
+++ b/website/content/en/status/report-2024-07-2024-09/pinephone.adoc
@@ -1,7 +1,7 @@
 === Pinephone Pro Support
 
 Links: +
-link:https://github.com[Github Repository] URL: link:https://github.com/[]
+link:https://codeberg.org/Honeyguide/freebsd-pinephonepro[Codeberg Repository] URL: link:https://codeberg.org/Honeyguide/freebsd-pinephonepro[https://codeberg.org/Honeyguide/freebsd-pinephonepro]
 
 Contact: Toby Kurien <toby@tobykurien.com>
 
