macros: Disallow crossref without description
While here, fix the macro documentation in fdp-primer.

--- a/documentation/content/en/books/fdp-primer/asciidoctor-primer/_index.adoc
+++ b/documentation/content/en/books/fdp-primer/asciidoctor-primer/_index.adoc
@@ -252,7 +252,7 @@ Books are structured in different directories to keep a sane layout.
 To create a link from one subdirectory of a book to another subdirectory of the
 same book, use the `crossref` macro:
 ....
-crossref:doc-build[documentation-makefile]
+crossref:doc-build[documentation-makefile, This link]
 ....
 And this would be rendered as
 
