--- a/documentation/content/en/books/fdp-primer/asciidoctor-primer/_index.adoc
+++ b/documentation/content/en/books/fdp-primer/asciidoctor-primer/_index.adoc
@@ -268,12 +268,12 @@ It is designed to render the correct link across the different outputs
 ====
 Use the `crossref` macro for intra-document links too.
 Although it might be inconvenient to write the name of the current document,
-it ensures the correct link is renderedacross the different outputs
+it ensures the correct link is rendered across the different outputs
 ====
 
 [WARNING]
 ====
-Do not use neither the `xref` macro nor its shortcut `<<` `>>`.
+Do not use either the `xref` macro or its shortcut `<<` `>>`.
 They do not work well in all output formats.
 ====
 
